Fixed 1px gap between popup header and popup content on view zoom. Lightened the color of popup.

--- a/app/styles/navigator.less
+++ b/app/styles/navigator.less
@@ -75,6 +75,7 @@ table {
 
 /*  Colors */
 @lightCharcoal: #777779;
+@lighterGrey: #FAFAFA;
 @lightGrey: #F1F2F2;
 @darkGrey: #CCCCCC;
 @charcoal: #333335;
@@ -647,6 +648,7 @@ zoom: 1;*/
 #popupContentWrapper .jspPane{
     width: 100% !important;
     border-radius: 8px;
+    background: @lighterGrey;
     box-shadow: 0px 0px 10px @lightCharcoal;
 }
 
